test-policies-pass/validating/block-privileged-containers/binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: block-privileged-containers-binding
spec:
  policyName: block-privileged-containers
  validationActions: [Deny]
